--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.5.0",
     "mdb-react-ui-kit": "^6.3.0",
     "next": "13.5.4",
     "react": "^18",
